--- a/Home.html
+++ b/Home.html
@@ -49,25 +49,90 @@
 </html>
 
 <style>
+/* General styles */
 body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
 }
+
+/* Header styles */
 header {
     background-color: #f5f5f5;
     padding: 20px;
 }
+nav {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
 nav a {
-    display: inline-block;
-    margin-right: 10px;
     text-decoration: none;
     color: #333;
+    margin-right: 10px;
+    font-size: 18px;
 }
 nav a:hover {
     color: #000;
 }
+
+/* Main section styles */
 main {
-    margin
+    margin: 0 auto;
+    max-width: 1200px;
+    padding: 20px;
+}
+section {
+    margin-bottom: 40px;
+}
+section h1 {
+    font-size: 36px;
+    margin-bottom: 20px;
+}
+section p {
+    font-size: 18px;
+    line-height: 1.5;
+    color: #666;
+}
+
+/* Contact section styles */
+section#contact {
+    background-color: #f5f5f5;
+    padding: 20px;
+}
+section#contact form {
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: 20px;
+}
+section#contact form label {
+    width: 100%;
+    margin-bottom: 10px;
+    font-size: 18px;
+}
+section#contact form input[type="text"],
+section#contact form input[type="email"],
+section#contact form textarea {
+    width: 100%;
+    padding: 10px;
+    font-size: 18px;
+    border: 1px solid #ccc;
+    box-sizing: border-box;
+    margin-bottom: 20px;
+}
+section#contact form input[type="submit"] {
+    background-color: #333;
+    color: #fff;
+    padding: 10px 20px;
+    border: none;
+    cursor: pointer;
+}
+
+/* Footer styles */
+footer {
+    background-color: #f5f5f5;
+    padding: 20px;
+    text-align: center;
+}
 
 </style>
